New Quote of the Day

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,7 @@
   {{ end }}
 
   <div class="col-xs-12">
-          <div class="lefttext"> Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed.</a></div> 
+          Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed.</a>
   </div>
 
 </footer>
