--- a/layouts/partials/body-bottom.html
+++ b/layouts/partials/body-bottom.html
@@ -4,3 +4,17 @@
 {{ else }}
   <script src="/scripts/{{ if .Site.Params.cacheBustJS }}{{ index .Site.Data.cachedAssets "main.js" }}{{ else }}main.min.js{{ end }}" type="text/javascript"></script>
 {{ end }}
+
+<div class="shadow">
+  <div class="my_container" align="center">
+  <h2 style="text-decoration: underline">Trending Projects</h2>
+  Are you a programmer like me? I bet you'll find at least one of these useful:
+  <br>
+    <div align="left">
+        <ul class="project-list">
+            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project">cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
+            <li class="project-item"><a href="https://github.com/bbugyi200/funky" class="project">funky</a>: Takes shell functions to the next level by making them easier to define, more flexible, and more interactive.</li>
+        </ul>
+    </div>
+  </div>
+</div>
