--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -125,4 +125,35 @@
         border-top: 30px solid #d58181;
     background: #fbeded;
     color: rgba(132, 56, 56, 0.995) !important; }
+
+    .shadow {
+        -webkit-border-radius: 0% 0% 100% 100% / 0% 0% 8px 8px;
+        -webkit-box-shadow: rgba(0, 0, 0,.30) 0 2px 3px;
+    }
+
+    .my_container {
+    margin: 0 auto;
+            margin-top: 50px;;
+
+    height: 325px;
+    background: #F2F2F2;
+    border: 1px solid #ccc;
+            box-shadow: 1px 1px 2px #fff inset,
+                -1px -1px 2px #fff inset;
+            border-radius: 3px/6px;         
+    }
+
+    a.project {
+        font-weight: bold;
+        font-size: 20pt;
+    }
+
+    .project-list {
+        margin-top: 10pt;
+    }
+
+    .project-item {
+        margin-top: 5pt;
+    }
+
 </style>
