--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -156,4 +156,14 @@
         margin-top: 5pt;
     }
 
+    hr { 
+        display: block;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style: inset;
+        border-width: 1px;
+    }
+
 </style>
