--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -156,13 +156,14 @@
         margin-top: 5pt;
     }
 
-    hr {
-      border: 0;
-      clear:both;
-      display:block;
-      width: 96%;               
-      background-color:#FFFF00;
-      height: 1px;
+    hr { 
+        display: block;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style: inset;
+        border-width: 1px;
     }
 
 </style>
