--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -156,6 +156,16 @@
         margin-top: 5pt;
     }
 
+    hr { 
+        display: block;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style: inset;
+        border-width: 2px;
+    }
+
     hr.style-eight {
         overflow: visible; /* For IE */
         padding: 0;
