--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -166,7 +166,7 @@
     }
 
     hr.style-eight:after {
-        content: "§";
+        content: "";
         display: inline-block;
         position: relative;
         top: -0.7em;
