--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,11 @@
   {{ end }}
 
   <div class="col-xs-12">
-          Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed.</a>
+      Are you a programmer like me? I bet you'll find at least one of these useful:
+        <ul class="project-list">
+            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project">cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
+            <li class="project-item"><a href="https://github.com/bbugyi200/funky" class="project">funky</a>: Takes shell functions to the next level by making them easier to define, more flexible, and more interactive.</li>
+        </ul>
   </div>
 
 </footer>
