Update Website Content

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -152,8 +152,10 @@
         margin-top: 10pt;
     }
 
-    .project-item {
-        margin-top: 5pt;
+    .project-icon {
+        display: inline-block;
+        margin-top: 5px;
+        margin-left: 5px;
     }
 
 </style>
