--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,13 +16,14 @@
     <div class="col-xs-3 col-md-2"><a target="_blank" href="https://twitter.com/{{ .Site.Params.twitter }}">Twitter</a></div>
   {{ end }}
 
-  <div class="col-xs-24">
-      <br>
-      <div style="text-decoration: underline; color=white">Trending Projects</div>
-      Are you a programmer like me? I bet you'll find at least one of these useful:
-      <br>
-            <a href="https://github.com/bbugyi200/cookie "><img src="https://raw.githubusercontent.com/bbugyi200/cookie/master/img/logo.png" title="A Template-based File Generator. Like cookiecutter but works with file templates instead of project templates." class="project-icon" width="48" height="48"/></a>
-            <a href="https://github.com/bbugyi200/funky"><img src="https://raw.githubusercontent.com/bbugyi200/funky/master/img/logo-64.png" title="Takes shell functions to the next level by making them easier to define, more flexible, and more interactive." class="project-icon" width="48" height="48"/></a>
+  <div class="col-xs-12">
+      <div class="trending">
+          <div style="text-decoration: underline; color=white">Trending Projects</div>
+          Are you a programmer like me? I bet you'll find at least one of these useful:
+          <br>
+          <a href="https://github.com/bbugyi200/cookie "><img src="https://raw.githubusercontent.com/bbugyi200/cookie/master/img/logo.png" title="A Template-based File Generator. Like cookiecutter but works with file templates instead of project templates." class="project-icon" width="64" height="64"/></a>
+          <a href="https://github.com/bbugyi200/funky"><img src="https://raw.githubusercontent.com/bbugyi200/funky/master/img/logo-64.png" title="Takes shell functions to the next level by making them easier to define, more flexible, and more interactive." class="project-icon" width="64" height="64"/></a>
+      </div>
   </div>
 
 </footer>
