--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,7 @@
   {{ end }}
 
   <div class="col-xs-12">
-      Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed.</a><img src="/images/RSS.png" class="project-icon"/>
+      Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed.</a><img src="/images/RSS.png" class="project-icon" width="16" height="16"/>
   </div>
 
 </footer>
