--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,7 @@
   {{ end }}
 
   <div class="col-xs-12">
-      Liked the article?&ensp;<a href="https://bryanbugyi.com/index.xml">Subscribe to my RSS feed:</a><img src="/images/RSS.png" style="display: inline-block; margin-left:15px;" width="32" height="32"/>
+      Liked the article?&ensp;Subscribe to my RSS feed:<a href="https://bryanbugyi.com/index.xml"><img src="/images/RSS.png" style="display: inline-block; margin-left:15px;" width="32" height="32"/></a>
   </div>
 
 </footer>
