Update Website Content

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,6 +17,8 @@
                   {{ .Content }}
               </article>
 
+              {{ partial "my_projects.html" }}
+
               <div class="pagination">
                   {{ if .PrevInSection }}
                       <a href="{{ .PrevInSection.Permalink }}">&laquo; {{ .PrevInSection.Title }}</a>
