--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,7 +1,9 @@
 <div class="shadow">
   <div class="my_container" align="center">
   <h2 style="text-decoration: underline">Trending Projects</h2>
-  Are you a programmer like me? Then I bet you'll find at least one of these useful:
+  Are you a programmer like me?
+  <br>
+  Then I bet you'll find at least one of these useful:
   <br>
     <div align="left">
         <ul class="project-list">
