Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,9 +1,11 @@
 <div class="shadow">
   <div class="my_container" align="center">
   <h2 style="text-decoration: underline">Trending Projects</h2>
-  Are you a programmer like me?
-  <br>
-  Then I bet you'll find at least one of these useful:
+  <div align="left">
+      Are you a programmer like me?
+      <br>
+      Then I bet you'll find at least one of these useful:
+  </div>
   <br>
     <div align="left">
         <ul class="project-list">
