--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
               <h1>{{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}</h1>
 
               <div class="sub-header">
-                  <a href="https://bryanbugyi.com/index.xml" style="text-decoration:none;"><img src="/images/RSS.png" style="display: inline-block; margin-left:15px;" width="32" height="32"/></a> &ensp; {{ .Date.Format (.Site.Params.dateform | default "January 2, 2006") }} · {{ .ReadingTime }} minute read
+                  <a href="https://bryanbugyi.com/index.xml" style="text-decoration:none"><img src="/images/RSS.png" style="display: inline-block; margin-left:15px;" width="32" height="32"/></a> &ensp; {{ .Date.Format (.Site.Params.dateform | default "January 2, 2006") }} · {{ .ReadingTime }} minute read
               </div>
 
               <article class="entry-content">
