Update Website Content

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -161,8 +161,16 @@
         margin-top: 5px;
     }
 
-    a:link, a:visited, a:active, a:hover {
-        text-decoration:none;
+    a.RSS {
+        color: #3EBDA7;
+        font-family: lato;
+        font-size: 12pt;
+        font-style: normal;
+        font-weight: 200;
+        line-height: 18pt;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: 0px 0px #3EBDA7;
     }
 
 </style>
