Update Website Content

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -170,7 +170,7 @@
         line-height: 18pt;
         text-align: left;
         text-decoration: none;
-        text-shadow: 0px 0px #3EBDA7;
+        text-shadow: 0px 0px #fffff;
     }
 
 </style>
