Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -3,7 +3,7 @@
   <h2 style="text-decoration: underline">Trending Projects</h2>
     <div align="left">
         <ul class="project-list">
-            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project"><img src="https://raw.githubusercontent.com/bbugyi200/cookie/master/img/logo.png" style="display:inline-block;" width="32" height="32"/>cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
+            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project"><img src="https://raw.githubusercontent.com/bbugyi200/cookie/master/img/logo.png" style="display:inline-block;" width="32" height="32"/> &ensp; cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
             <li class="project-item"><a href="https://github.com/bbugyi200/funky" class="project">funky</a>: Takes shell functions to the next level by making them easier to define, more flexible, and more interactive.</li>
         </ul>
     </div>
