--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -154,8 +154,7 @@
 
     .project-icon {
         display: inline-block;
-        margin-top: 5px;
-        margin-left: 5px;
+        margin-right: 5px;
     }
 
     .trending {
