--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,6 +1,7 @@
 <div class="shadow">
   <div class="my_container" align="center">
   <h2 style="text-decoration: underline">Trending Projects</h2>
+  Are you a programmer like me? I bet you'll find at least one of these useful:
     <div align="left">
         <ul class="project-list">
             <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project">cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
