Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,4 +1,4 @@
-Thanks for reading! Before you go, take a look at a few of my more popular open source projects. They make my job as a programmer easier. But they can do the same for you! :smile:
+Thanks for reading! Before you go, take a look at a few of my more popular open source projects. They make my job as a programmer easier. They could do the same for you!
 
 <div class="shadow">
   <div class="my_container" align="center">
