Update Website Content

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -160,4 +160,12 @@
         margin-top: 5px;
     }
 
+    hr {
+      border: 0;
+      clear:both;
+      display:block;
+      width: 96%;               
+      background-color:#FFFF00;
+      height: 1px;
+    }
 </style>
