--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -160,10 +160,13 @@
         margin-top: 5px;
     }
 
-    hr {
-      border: 1;
-      display:block;
-      width: 96%;               
-      height: 1px;
+    hr { 
+        display: block;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        border-style: inset;
+        border-width: 1px;
     }
 </style>
