Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,5 +1,5 @@
 <hr>
-Thanks for reading. Before you go, take a look at a few of my more popular open source projects. They make my job as a programmer easier. And they could do the same for you! &#x1f604;
+Thanks for reading! Before you go, take a look at a few of my more popular open source projects. They make my job as a programmer easier. And they could do the same for you! &#x1f604;
 
 <div class="shadow">
   <div class="my_container" align="center">
