Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,4 +1,5 @@
-Did you enjoy the article? <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow Me on Twitter!</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+Did you enjoy the article? Follow me on Twitter to be notified when I upload my next post!: <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
 
 Thanks for reading! Before you go, take a look at some of my more popular open source projects. They make my job as a programmer easier. And they could do the same for you! &#x1f604;
 
