Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,4 +1,4 @@
-<div style="margin-right=5px;">Did you enjoy the article? Follow me on Twitter to be notified when I publish the next one:</div> <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div style="margin-right=5px;">Did you enjoy the article? Follow me on Twitter to be notified when I publish the next one:</div> <a style="display: inline-block;" href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <br>
 
