--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -12,4 +12,6 @@ Thanks for reading! Before you go, take a look at some of my more popular open s
   </div>
 </div>
 
-Did you enjoy the article? Follow me on Twitter to be notified when I publish the next one: &ensp; <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div style="margin-top:10px;">
+    Did you enjoy the article? Follow me on Twitter to be notified when I publish the next one: &ensp; <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
