Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -1,4 +1,4 @@
-## Thanks for Reading!
+<h2>Thanks for Reading!</h2>
 
 Before you go, take a look at some of my more popular open source projects. They make my job as a programmer easier. And they could do the same for you! &#x1f604;
 
