--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -14,4 +14,4 @@ Before you go, take a look at some of my more popular open source projects. They
   </div>
 </div>
 
-Did you enjoy the article? Follow me on Twitter to be notified when I publish the next one: &ensp; <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+Did you enjoy the article? Follow me on Twitter so you'll be notified when I publish the next one: &ensp; <a href="https://twitter.com/bryan_bugyi?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @bryan_bugyi</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
