Update Website Content

--- a/layouts/partials/my_projects.html
+++ b/layouts/partials/my_projects.html
@@ -9,7 +9,7 @@ Before you go, take a look at some of my more popular open source projects. Thes
   <h3 style="text-decoration: underline">Trending Projects</h3>
     <div align="left">
         <ul class="project-list">
-            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project">cookie</a>: A Template-based File Generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
+            <li class="project-item"><a href="https://github.com/bbugyi200/cookie" class="project">cookie</a>: A template-based file generator. Like <a href="https://github.com/audreyr/cookiecutter">cookiecutter</a> but works with file templates instead of project templates.</li>
             <li class="project-item"><a href="https://github.com/bbugyi200/funky" class="project">funky</a>: Takes shell functions to the next level by making them easier to define, more flexible, and more interactive.</li>
         </ul>
     </div>
