Update Website Content

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
   {{ end }}
 
   {{ if .Site.Params.CV }}
-    <div class="col-xs-3 col-md-2"><a target="_blank" href="{{ .Site.Params.CV }}">CV</a></div>
+    <div class="col-xs-3 col-md-2"><a target="_blank" href="{{ .Site.Params.CV }}">C.V.</a></div>
   {{ end }}
 
   {{ if or (.Site.Params.copyright) (.Site.Params.credit) }}
